syntax = "proto3";

package aether.registry.v1;

import "api/aether/cni/v1/cni.proto";

option go_package = "github.com/bpalermo/aether/api/aether/registry/v1;registryv1";

message RegistryPod {

  aether.cni.v1.CNIPod cni_pod = 1;

  map<string, string> annotations = 2;

  map<string, string> labels = 3;

}
